# nightly2version

./: .gitignore  Cargo.toml  README.md
generate-versions/: Cargo.toml
generate-versions/src/: main.rs
src/: generated.rs  lib.rs
