[package]
name = "nightly2version"
version = "1.87.0"
edition = "2021"
description = "`#[no_std]` and fast crate a Rust version to a timestamp and vice-versa (along other things)"
license = "MPL-2.0"

homepage = "https://github.com/rust-lang/rust-clippy"
repository = "https://github.com/rust-lang/rust-clippy"
readme = "README.md"
keywords = ["version", "nightly", "rust"]
categories = ["date-and-time", "no-std", "rust-patterns"]

[dependencies]

[features]
default = ["std"]
std = []

[workspace]
members = ["generate-versions"]
